--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="https://ocs.alatoo.edu.kg/pluginfile.php/1/core_admin/logo/0x200/1679882010/Logo.png">
   <link rel="stylesheet" href="css/styles.css">
   <title>Weather App</title>
 </head>
